PER-9259-fix pdf display on mobile
I have fixed the pdf display on mobile by adding an additional check and removing a css rule

--- a/src/app/file-browser/components/file-viewer/file-viewer.component.scss
+++ b/src/app/file-browser/components/file-viewer/file-viewer.component.scss
@@ -113,10 +113,6 @@ iframe {
   iframe {
     width: 100%;
     height: 100%;
-
-    @media screen and (max-width: 800px) {
-      display: none;
-    }
   }
 }
 
